gromacs and amber work

--- a/tools/buildtools/ambertools/template_parmconv.j2
+++ b/tools/buildtools/ambertools/template_parmconv.j2
@@ -1,6 +1,13 @@
 {% if fmt == 'AMBER' %}
-parm {{ prmtop_in }}
+parm {{ top_in }}
+{% elif fmt == 'GROMACS' %}
+gromber {{ top_in }} {{gro_in}}
+{% elif fmt == 'CHARMM' %}
+chamber {{ top_in }} {{gro_in}}
+{% else %}
+parm {{ top_in }}
 {% endif %}
+
 strip {{ stripmask }}
 summary
 outparm {{ prmtop_out }}
