--- a/tools/buildtools/ambertools/template_parmconv.j2
+++ b/tools/buildtools/ambertools/template_parmconv.j2
@@ -1,3 +1,4 @@
+# Template for parmconv in Galaxy
 {% if fmt == 'AMBER' %}
 parm {{ top_in }}
 {% elif fmt == 'GROMACS' %}
@@ -7,7 +8,6 @@ chamber {{ top_in }} {{gro_in}}
 {% else %}
 parm {{ top_in }}
 {% endif %}
-
 strip {{ stripmask }}
 summary
 outparm {{ prmtop_out }}
