--- a/tools/buildtools/ambertools/template_mmpbsa_mmgbsa.j2
+++ b/tools/buildtools/ambertools/template_mmpbsa_mmgbsa.j2
@@ -2,16 +2,15 @@
 #  
 &general
 startframe={{ allparams.startframe }}, endframe={{ allparams.endframe }}, interval={{ allparams.interval }},
-verbose={{ allparams.verbose }}, keep_files={{ allparams.keep_files | int }}, strip_mask={{ allparams.strip_mask }}, use_sander={{ allparams.use_sander | int }}, entropy={{ allparams.entropy | int }},  netcdf=1
+verbose=2, keep_files={{ allparams.keep_files | int }}, strip_mask={{ allparams.strip_mask }}, use_sander={{ allparams.use_sander | int }}, entropy={{ allparams.entropy | int }},  netcdf=1
 /
-{% if calcdetails.gbcalc.calctype == 'yes' %}
+{% if calcdetails.gb_pb_calc.calctype == 'gb' %}
 &gb
-igb={{ calcdetails.gbcalc.igb }}, saltcon={{ calcdetails.gbcalc.saltcon }}
+igb={{ calcdetails.gb_pb_calc.igb }}, saltcon={{ calcdetails.gb_pb_calc.saltcon }}
 /
-{% endif %}
-{% if calcdetails.pbcalc.calctype == 'yes' %}
+{% elif calcdetails.gb_pb_calc.calctype == 'pb' %}
 &pb
-istrng={{ calcdetails.pbcalc.istrng }}, fillratio={{ calcdetails.pbcalc.fillratio }}, inp={{ calcdetails.pbcalc.inp }},radiopt={{ calcdetails.pbcalc.radiopt }}
+istrng={{ calcdetails.gb_pb_calc.istrng }}, fillratio={{ calcdetails.gb_pb_calc.fillratio }}, inp={{ calcdetails.gb_pb_calc.inp }},radiopt={{ calcdetails.gb_pb_calc.radiopt }}
 /
 {% endif %}
 {% if calcdetails.decomposition.decomposition == 'yes' %}
